fix: Extra space beside logo when logo is not selected.

--- a/assets/css/unminified/frontend-rtl.css
+++ b/assets/css/unminified/frontend-rtl.css
@@ -2599,7 +2599,7 @@ body .entry-content .wp-block-latest-posts li {
   align-items: center;
 }
 
-.ast-logo-title-inline .site-logo-img {
+.ast-logo-title-inline .site-logo-img:not(:empty) {
   padding-left: 1em;
 }
 
