--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -233,7 +233,7 @@
 	    vertical-align: middle;
 	    align-items: center;
 	}
-	.site-logo-img {
+	.site-logo-img:not(:empty) {
 		padding-right: 1em;
 	}
 }
